--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="referrer" content="no-referrer">
   <link rel="icon" href="/favicon.ico">
-  <title>快手渠道</title>
+  <title>渠道</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app" />
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
